Добавление настроек бд

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 SECRET_KEY=ВАШ СЕКРЕТНЫЙ КЛЮЧЬ. Пример: gV64m9aIzFG4qpgVphvQbPQrtAO0nM-7YwwOvu0XPt5KJOjAy4AfgLkqJXYEt
 ALGORITHM=ВАШ АЛГОРИТМ. Пример: HS256
+
+DB_HOST=ВАШИ ДАННЫЕ БД
+DB_PORT=ВАШИ ДАННЫЕ БД
+DB_NAME=ВАШИ ДАННЫЕ БД
+DB_USER=ВАШИ ДАННЫЕ БД
+DB_PASSWORD=ВАШИ ДАННЫЕ БД
